# bot

./: Dockerfile  main.py  pyproject.toml
filters/: chat_types.py
handlers/: user_private.py
templates/: output_templates.py
utils/: comands.py  get_stats_from_api.py  keyboards.py
